--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity android:name=".ui.LegendInfoActivity"/>
 
         <activity
             android:name=".ui.MainActivity"
@@ -42,8 +42,6 @@
         <activity android:name=".ui.LoginActivity"
             android:screenOrientation="portrait"
             android:theme="@style/LoginActivityTheme"/>
-
-        <activity android:name=".ui.LegendActivity"/>
 
         <activity
             android:name="com.mob.tools.MobUIShell"
