--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,11 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:design:27.1.1'
+    implementation 'com.youth.banner:banner:1.4.4'
+    implementation 'in.srain.cube:ultra-ptr:1.0.11'
+    implementation 'com.squareup.retrofit2:retrofit:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.1.0'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
     implementation files('libs/MobCommons-2016.1107.1809.jar')
     implementation files('libs/MobTools-2016.1107.1809.jar')
